页面部分功能

--- a/elasticSearch/src/main/resources/templates/list.html
+++ b/elasticSearch/src/main/resources/templates/list.html
@@ -1042,12 +1042,21 @@
                 <div class="filter">
                     <!--综合排序-->
                     <div class="filter_top">
-                        <div class="filter_top_left">
-                            <a href="/static/search/#">综合排序</a>
-                            <a href="/static/search/#">销量</a>
-                            <a href="/static/search/#">价格</a>
+                        <div class="filter_top_left" th:with="p = ${param.sort},priceRange = ${param.skuPrice}">
+                            <a th:class="${(!#strings.isEmpty(p) && #strings.startsWith(p,'hotScore') && #strings.endsWith(p,'desc'))?'sort_a desc':'sort_a'}"
+                               th:attr="style=${(#strings.isEmpty(p) || #strings.startsWith(p,'hotScore'))?'border-color: #e4393c;color:#FFF;background: #e4393c':'border-color: #CCC;color:#333;background: #FFF'}"
+                               sort="hotScore" href="/static/search/#">综合排序 [[${(!#strings.isEmpty(p) && #strings.startsWith(p,'hotScore') && #strings.endsWith(p,'desc'))?'👇':'👆'}]] </a>
+                            <a th:class="${(!#strings.isEmpty(p) && #strings.startsWith(p,'saleCount') && #strings.endsWith(p,'desc'))?'sort_a desc':'sort_a'}"
+                               th:attr="style=${(!#strings.isEmpty(p) && #strings.startsWith(p,'saleCount'))?'border-color: #e4393c;color:#FFF;background: #e4393c':'border-color: #CCC;color:#333;background: #FFF'}"
+                               sort="saleCount" href="/static/search/#">销量  [[${(!#strings.isEmpty(p) && #strings.startsWith(p,'saleCount') && #strings.endsWith(p,'desc'))?'👇':'👆'}]]</a>
+                            <a th:class="${(!#strings.isEmpty(p) && #strings.startsWith(p,'skuPrice') && #strings.endsWith(p,'desc'))?'sort_a desc':'sort_a'}"
+                               th:attr="style=${(!#strings.isEmpty(p) && #strings.startsWith(p,'skuPrice'))?'border-color: #e4393c;color:#FFF;background: #e4393c':'border-color: #CCC;color:#333;background: #FFF'}"
+                               sort="skuPrice" href="/static/search/#">价格  [[${(!#strings.isEmpty(p) && #strings.startsWith(p,'skuPrice') && #strings.endsWith(p,'desc'))?'👇':'👆'}]]</a>
                             <a href="/static/search/#">评论分</a>
                             <a href="/static/search/#">上架时间</a>
+                            <input id="skuPriceFrom" type="number" style="width: 100px;margin-left: 30px" th:value="${#strings.isEmpty(priceRange)?'':#strings.substringBefore(priceRange,'_')}"> -
+                            <input id="skuPriceTo" type="number" style="width: 100px" th:value="${#strings.isEmpty(priceRange)?'':#strings.substringAfter(priceRange,'_')}" >
+                            <button id="skuPriceSearchBtn"> 确定</button>
                         </div>
                         <div class="filter_top_right">
                             <span class="fp-text">
@@ -1156,8 +1165,8 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="/static/search/#">
-                                        <i></i>
+                                    <a href="/static/search/#" th:with="check=${param.hasStock}">
+                                        <input id="showHasStock" type="checkbox" th:checked="${#strings.equals(check,'1')}">
                                         仅显示有货
                                     </a>
                                 </li>
@@ -1984,12 +1993,7 @@
     })
 
     function searchProducts(name, value) {
-        var href = location.href + "";
-        if (href.indexOf("?") != -1) {
-            location.href = location.href + "&" + name + "=" + value
-        } else {
-            location.href = location.href + "?" + name + "=" + value
-        }
+        location.href = replaceParamVal(location.href,name,value);
     }
 
     function searchByKeyword() {
@@ -2004,16 +2008,75 @@
         }else {
             location.href = location.href + "&pageNum=" + pn;
         }
-
         return false;
     });
 
     function replaceParamVal(url,paramName,replaceVal) {
+        // 没有添加，有替换
         var oUrl = url.toString();
-        var re = eval('/(' +paramName+ '=)([^&]*)/gi');
-        var nUrl = oUrl.replace(re,paramName+'='+replaceVal);
-        return nUrl;
+        if (oUrl.indexOf(paramName)!=-1){
+            var re = eval('/(' +paramName+ '=)([^&]*)/gi');
+            var nUrl = oUrl.replace(re,paramName+'='+replaceVal);
+            return nUrl;
+        }else {
+            if (oUrl.indexOf("?") != -1) {
+                var nUrl = oUrl+"&"+paramName+'='+replaceVal;
+            } else {
+                var nUrl = oUrl+"?"+paramName+'='+replaceVal;
+            }
+            return nUrl;
+        }
+
+
     }
+
+    $(".sort_a").click(function (){
+        //color: #FFF;border-color: #e4393c;background: #e4393c;
+
+        // changeStyle(this);
+        $(this).toggleClass("desc");
+        var sort = $(this).attr("sort");
+        sort = $(this).hasClass("desc")?sort+"_desc":sort+"_asc";
+        location.href = replaceParamVal(location.href,"sort",sort);
+        return false;
+    })
+    function changeStyle(ele) {
+        // 'border-color: #CCC;color:#333;background: #FFF':''
+        // 'border-color: #e4393c;color:#FFF;background: #e4393c'
+        $(".sort_a").css({"color":"#333","border-color":"#CCC","background":"#FFF"})
+        $(this).css({"color":"#FFF","border-color":"#e4393c","background":"#e4393c"});
+        $(".sort_a").each(function (){
+            var text = $(this).text().replace("👇","").replace("👆","");
+            $(this).text(text);
+        })
+        $(ele).toggleClass("desc");
+        if ($(ele).hasClass("desc")) {
+            var text = $(ele).text().replace("👇","").replace("👆","");
+            text = text+ "👇";
+            $(ele).text(text);
+        }else {
+            var text = $(ele).text().replace("👇","").replace("👆","");
+            text = text+ "👆";
+            $(ele).text(text);
+        }
+    }
+    $("#skuPriceSearchBtn").click(function (){
+        // 拼接价格区间查询条件
+        var from = $("#skuPriceFrom").val();
+        var to = $("#skuPriceTo").val();
+        var search = from + "_" +to;
+        location.href = replaceParamVal(location.href,"skuPrice",search);
+    })
+
+    $("#showHasStock").change(function (){
+        if ($(this).prop('checked')) {
+            location.href = replaceParamVal(location.href,"hasStock",1);
+        }else {
+            var re = eval('/(hasStock=)([^&]*)/gi');
+            location.href = (location.href+"").replace(re,'');
+        }
+        return false;
+    })
 </script>
 </body>
 </html>
