--- a/elasticSearch/src/main/resources/templates/list.html
+++ b/elasticSearch/src/main/resources/templates/list.html
@@ -765,6 +765,11 @@
                 <a href="/static/search/#">游戏手机</a>
             </div>
         </div>
+        <!-- 遍历面包屑功能 -->
+        <div class="JD_ipone_one c">
+            <a th:href="${nav.link}" th:each="nav:${result.navs}"><span th:text="${nav.navName}"></span>:<span th:text="${nav.navValue}"></span> ×</a>
+
+        </div>
         <i><img src="/static/search/image/right-@1x.png" alt=""></i>
     </div>
 </div>
@@ -846,7 +851,7 @@
                         <ul>
                             <li th:each="value:${attr.attrValue}">
                                 <a href="/static/search/#"
-                                   th:href="${'javascript:searchProducts(&quot;attrId&quot;,&quot;'+attr.attrId+'_'+value+'&quot;)'}"
+                                   th:href="${'javascript:searchProducts(&quot;attrs&quot;,&quot;'+attr.attrId+'_'+value+'&quot;)'}"
                                    th:text="${value}"></a>
                             </li>
                         </ul>
@@ -1993,7 +1998,7 @@
     })
 
     function searchProducts(name, value) {
-        location.href = replaceParamVal(location.href,name,value);
+        location.href = replaceParamVal(location.href,name,value,true);
     }
 
     function searchByKeyword() {
@@ -2011,13 +2016,22 @@
         return false;
     });
 
-    function replaceParamVal(url,paramName,replaceVal) {
+    function replaceParamVal(url,paramName,replaceVal,focusAdd) {
         // 没有添加，有替换
         var oUrl = url.toString();
         if (oUrl.indexOf(paramName)!=-1){
-            var re = eval('/(' +paramName+ '=)([^&]*)/gi');
-            var nUrl = oUrl.replace(re,paramName+'='+replaceVal);
-            return nUrl;
+            if (focusAdd) {
+                if (oUrl.indexOf("?") != -1) {
+                    var nUrl = oUrl+"&"+paramName+'='+replaceVal;
+                } else {
+                    var nUrl = oUrl+"?"+paramName+'='+replaceVal;
+                }
+                return nUrl;
+            }else {
+                var re = eval('/(' +paramName+ '=)([^&]*)/gi');
+                var nUrl = oUrl.replace(re,paramName+'='+replaceVal);
+                return nUrl;
+            }
         }else {
             if (oUrl.indexOf("?") != -1) {
                 var nUrl = oUrl+"&"+paramName+'='+replaceVal;
@@ -2026,8 +2040,6 @@
             }
             return nUrl;
         }
-
-
     }
 
     $(".sort_a").click(function (){
