--- a/authServer/src/main/resources/templates/login.html
+++ b/authServer/src/main/resources/templates/login.html
@@ -82,18 +82,18 @@
 				<div class="si_out">
 					<ul>
 						<li>
-							<a href="/static/login/#">
-								<img src="/static/login/JD_img/qq.png" />
-								<span>QQ</span>
+							<a href="https://api.weibo.com/oauth2/authorize?client_id=484429290&response_type=code&redirect_uri=http://auth.happymall.mall/oauth2/weibo/success">
+								<img style="width: 50px;height: 18px" src="/static/login/JD_img/weibo.png" />
 							</a>
 						</li>
 						<li class="f4"> | </li>
 						<li>
 							<a href="/static/login/">
-								<img src="/static/login/JD_img/weixin.png" />
-								<span>微信</span>
+								<img src="/static/login/JD_img/qq.png" />
+								<span>QQ</span>
 							</a>
 						</li>
+						<li class="f4"> | </li>
 					</ul>
 					<h5 class="rig">
 						<img src="/static/login/JD_img/4de5019d2404d347897dee637895d02b_25.png" />
