--- a/product/src/main/resources/templates/index.html
+++ b/product/src/main/resources/templates/index.html
@@ -95,7 +95,7 @@
             </b>
             <ul>
                 <li>
-                    <a href="http://auth.happymall.mall/login.html">你好，请登录</a>
+                    <a href="http://auth.happymall.mall/login.html">你好，请登录:[[${session.loginUser==null?'':session.loginUser.nickname}]]</a>
                 </li>
                 <li>
                     <a href="http://auth.happymall.mall/reg.html" class="li_2">免费注册</a>
