--- a/elasticSearch/src/main/resources/templates/list.html
+++ b/elasticSearch/src/main/resources/templates/list.html
@@ -64,10 +64,11 @@
         </b>
         <ul>
             <li>
-                <a href="/static/search/#" class="li_2">你好，请登录</a>
+                <a href="http://auth.happymall.mall/login.html" th:if="${session.loginUser==null}" class="li_2">你好，请登录</a>
+                <a th:if="${session.loginUser!=null}" class="li_2">欢迎,[[${session.loginUser.nickname}]]</a>
             </li>
             <li>
-                <a href="/static/search/#">免费注册</a>
+                <a th:if="${session.loginUser==null}" href="http://auth.happymall.mall/reg.html">免费注册</a>
             </li>
             <span>|</span>
             <li>
