--- a/product/src/main/resources/templates/index.html
+++ b/product/src/main/resources/templates/index.html
@@ -95,10 +95,11 @@
             </b>
             <ul>
                 <li>
-                    <a href="http://auth.happymall.mall/login.html">你好，请登录:[[${session.loginUser==null?'':session.loginUser.nickname}]]</a>
+                    <a th:if="${session.loginUser!=null}">欢迎：[[${session.loginUser==null?'':session.loginUser.nickname}]]</a>
+                    <a href="http://auth.happymall.mall/login.html" th:if="${session.loginUser==null}">你好，请登录</a>
                 </li>
                 <li>
-                    <a href="http://auth.happymall.mall/reg.html" class="li_2">免费注册</a>
+                    <a href="http://auth.happymall.mall/reg.html" class="li_2" th:if="${session.loginUser==null}">免费注册</a>
                 </li>
                 <span>|</span>
                 <li>
