--- a/product/src/main/resources/templates/item.html
+++ b/product/src/main/resources/templates/item.html
@@ -625,8 +625,8 @@
 								</div>
 							</div>
 							<div class="box-btns-two">
-								<a href="/static/item/../商品分类\index.html">
-									立即预约
+								<a href="http://cart.happymall.mall/addToCart">
+									加入购物车
 								</a>
 							</div>
 							<div class="box-btns-three">
