--- a/product/src/main/resources/templates/item.html
+++ b/product/src/main/resources/templates/item.html
@@ -608,7 +608,7 @@
 
 						<div class="box-btns clear">
 							<div class="box-btns-one">
-								<input type="text" name="" id="" value="1" />
+								<input type="text" name="" id="numInput" value="1" />
 								<div class="box-btns-one1">
 
 									<div>
@@ -625,7 +625,7 @@
 								</div>
 							</div>
 							<div class="box-btns-two">
-								<a href="http://cart.happymall.mall/addToCart">
+								<a href="#" id="addToCart" th:attr="skuId=${item.info.skuId}">
 									加入购物车
 								</a>
 							</div>
@@ -1733,6 +1733,12 @@
 	<script src="/static/item/js/jquery1.9.js" type="text/javascript" charset="utf-8"></script>
 	<script src="/static/item/js/js.js" type="text/javascript" charset="utf-8"></script>
 	<script type="text/javascript">
+		$("#addToCart").click(function (){
+			var num = $("#numInput").val();
+			var skuId = $(this).attr("skuId");
+			location.href = "http://cart.happymall.mall/addToCart?skuId="+skuId+"&num="+num;
+			return false;
+		});
 	</script>
 
 </html>
