--- a/cart/src/main/resources/templates/cartList.html
+++ b/cart/src/main/resources/templates/cartList.html
@@ -23,8 +23,13 @@
 
 					</ul>
 					<ul class="header-right">
-						<li><a href="/static/cart./登录页面\index.html" style="color: red;">你好，请登录</a></li>
-						<li><a href="/static/cart./注册页面\index.html">免费注册</a></li>
+						<li>
+							<a th:if="${session.loginUser!=null}">欢迎：[[${session.loginUser==null?'':session.loginUser.nickname}]]</a>
+							<a href="http://auth.happymall.mall/login.html" th:if="${session.loginUser==null}">你好，请登录</a>
+						</li>
+						<li>
+							<a href="http://auth.happymall.mall/reg.html" class="li_2" th:if="${session.loginUser==null}">免费注册</a>
+						</li>
 						<li class="spacer"></li>
 						<li><a href="">我的订单</a></li>
 						<li class="spacer"></li>
@@ -52,7 +57,7 @@
 						<input type="button" value="搜索" class="one_right_btn">
 					</div>
 				</div>
-				<div class="one_search_load" th:if="${userId}==null">
+				<div class="one_search_load" th:if="${session.loginUser==null}==null">
 					<img src="/static/cart/img/shop_07.jpg" class="one_load_wraing">
 					<span>您还没有登录！登录后购物车的商品将保存到您账号中</span>
 					<a href="#"><input type="button" onclick="login()" value="立即登录" class="one_load_btn"></a>
@@ -80,80 +85,51 @@
 				</div>
 
 				<div class="One_ShopCon">
-					<ul>
-						<li th:each="cartInfo:${cartList}">
-							<div> </div>
-
+					<h1 th:if="${cart.items==null}">
+						购物车里没有商品
+						<a href="http://happymall.mall"> 去购物 </a>
+					</h1>
+					<ul th:if="${cart.items!=null}">
+						<li th:each="item:${cart.items}">
+							<div>
+							</div>
 							<div>
 								<ol>
-									<li><input type="checkbox" class="check" th:value="${cartInfo.skuId}" onchange="checkSku(this)" th:checked="(${cartInfo.isChecked}==1)?'true':'false'" /></li>
+									<li><input th:attr="skuId=${item.skuId}" type="checkbox" class="itemChecks" th:checked="${item.check}"></li>
 									<li>
-										<dt><img th:src="${cartInfo.imgUrl}" src="img\shop1.jpg" alt=""></dt>
-										<dd th:onclick="'toItem('+${cartInfo.skuId}+')'">
+										<dt><img th:src="${item.img}" alt=""></dt>
+										<dd style="width: 300px">
 											<p>
-												<span th:text="${cartInfo.skuName}">TCL 55A950C 55英寸32核</span>
+												<span th:text="${item.title}"></span>
+												<br>
+												<span th:each="attr:${item.skuAttr}" th:text="${attr}"></span>
 											</p>
+
 										</dd>
 									</li>
 									<li>
-										<p class="dj" th:text="'￥'+${cartInfo.skuPrice}">4599.00</p>
+										<p class="dj" th:text="'￥'+${#numbers.formatDecimal(item.price,3,2)}"></p>
+
 									</li>
 									<li>
-										<p>
-											<span>-</span>
-											<span th:text="${cartInfo.skuNum}">5</span>
-											<span>+</span>
+										<p th:attr="skuId=${item.skuId}">
+											<span class="countOpsBtn">-</span>
+											<span class="count" th:text="${item.count}">4</span>
+											<span class="countOpsBtn">+</span>
 										</p>
+
 									</li>
-									<li style="font-weight:bold">
-										<p class="zj" th:text="'￥'+${cartInfo.totalPrice}">￥22995.00</p>
-									</li>
+									<li style="font-weight:bold"><p class="zj" th:text="'￥'+${#numbers.formatDecimal(item.getTotalPrice(),3,2)}"></p></li>
 									<li>
-										<p>删除</p>
+										<p th:attr="skuId=${item.skuId}" class="deleteBtn">删除</p>
+
 									</li>
 								</ol>
 							</div>
 						</li>
-						<!--<li>
-                    <div>
-                    </div>
-                    <div>
-                        <ol>
-                            <li><input type="checkbox"  class="check"></li>
-                            <li>
-                                <dt><img src="img\shop1.jpg" alt=""></dt>
-                                <dd>
-                                    <p>
-
-                                        <span>TCL 55A950C 55英寸32核</span>
-                                        <span>尺码: 55时 超薄曲面 人工智能</span>
-                                    </p>
-                                    <p>人工智能 HDR曲面超薄4K电视金属机</p>
-
-                                </dd>
-                            </li>
-                            <li>
-                                <p class="dj">￥4599.00</p>
-
-                            </li>
-                            <li>
-                                <p>
-                                    <span>-</span>
-                                    <span>5</span>
-                                    <span>+</span>
-                                </p>
-
-                            </li>
-                            <li style="font-weight:bold"><p class="zj">￥22995.00</p></li>
-                            <li>
-                                <p>删除</p>
-
-                            </li>
-                        </ol>
-                    </div>
-                </li>-->
 
 					</ul>
+
 				</div>
 				<div class="One_ShopFootBuy fix1">
 					<div>
@@ -174,8 +150,8 @@
 					</div>
 					<div>
 						<ol>
-							<li>总价:<span style="color:#e64346;font-weight:bold;font-size:16px;" class="fnt">￥0.00</span> </li>
-
+							<li>总价:<span style="color:#e64346;font-weight:bold;font-size:16px;" class="fnt" th:text="'￥'+${#numbers.formatDecimal(cart.getTotalAmount(),3,2)}"></span> </li>
+							<li>优惠:[[${#numbers.formatDecimal(cart.reduce,1,2)}]]</li>
 						</ol>
 					</div>
 					<div><button onclick="toTrade()" type="button">去结算</button></div>
@@ -197,7 +173,7 @@
 				</dl>
 			</div>
 			<div>
-				<button type="button">删除</button>
+				<button type="button" onclick="deleteItem()">删除</button>
 
 			</div>
 		</div>
@@ -255,7 +231,7 @@
 
 		function login() {
 			var s = encodeURIComponent("http://cart.gmall.com:8087/cartList");
-			window.location.href = "http://passport.atguigu.com/index?originUrl=" + s;
+			window.location.href = "http://auth.happymall.mall/login.html";
 		}
 
 		function checkSku(chkbox) {
@@ -730,15 +706,6 @@
 			$(this).parent().parent().slideUp(100)
 		})
 
-
-
-
-
-
-
-
-
-
 		//active
 		$(".one_main_div1 .one_main_ul>li").mouseover(function() {
 			$(".one_main_div1 .one_main_ul>li").removeClass("active");
@@ -798,5 +765,19 @@
 		}).mouseout(function() {
 			$(this).children("p").children("img").attr("src", "img/one_mian_gwc1.png")
 		})
+		$(".itemChecks").on('click',function () {
+			var skuId = $(this).attr("skuId");
+			var check = $(this).prop("checked");
+			location.href = "http://cart.happymall.mall/checkItem?skuId=" + skuId + "&check=" + (check?1:0);
+		})
+		$(".countOpsBtn").click(function (){
+			var skuId = $(this).parent("p").attr("skuId");
+			var count = $(this).parent().find(".count").text();
+			location.href = "http://cart.happymall.mall/countItem?skuId=" + skuId + "&count=" + count;
+		})
+		function deleteItem() {
+			var skuId = $(".deleteBtn").attr("skuId");
+			location.href = "http://cart.happymall.mall/deleteItem?skuId=" + skuId;
+		}
 	</script>
 </html>
