--- a/cart/src/main/resources/templates/success.html
+++ b/cart/src/main/resources/templates/success.html
@@ -24,10 +24,13 @@
 
         </ul>
 
-        <ul class="hd_wrap_right">
-            <li class="forel">
-                <a href="http://auth.happymall.mall/login.html" class="link_login">你好,请登录</a>&nbsp;
-                <a href="http://auth.happymall.mall/reg.html" class="link_regist">免费注册</a>
+        <ul class="hd_wrap_right" >
+            <li>
+                <a th:if="${session.loginUser!=null}">欢迎：[[${session.loginUser==null?'':session.loginUser.nickname}]]</a>
+                <a href="http://auth.happymall.mall/login.html" th:if="${session.loginUser==null}">请登录</a>
+            </li>
+            <li>
+                <a href="http://auth.happymall.mall/reg.html" class="li_2" th:if="${session.loginUser==null}">免费注册</a>
             </li>
             <li class="spacer"></li>
 
@@ -64,7 +67,7 @@
     <div class="success-wrap">
         <div class="w" id="result">
             <div class="m succeed-box">
-                <div class="mc success-cont">
+                <div th:if="${item!=null}" class="mc success-cont">
                     <div class="success-lcol">
                         <div class="success-top"><b class="succ-icon"></b>
                             <h3 class="ftx-02">商品已成功加入购物车</h3></div>
@@ -94,6 +97,9 @@
                                id="GotoShoppingCart"><b></b>去购物车结算</a>
                         </div>
                     </div>
+                </div>
+                <div th:if="${item==null}" class="mc success-cont">
+                    <h2>购物车中无此商品</h2>  <a href="http://happymall.mall">去购物</a>
                 </div>
             </div>
         </div>
