--- a/product/src/main/resources/templates/item.html
+++ b/product/src/main/resources/templates/item.html
@@ -14,7 +14,7 @@
 			<!--品牌官方网站-->
 					<div class="min">
 						<ul class="header_ul_left">
-							<li class="glyphicon glyphicon-home"> <a href="/static/item/shouye.html" class="aa">京东首页</a></li>
+							<li class="glyphicon glyphicon-home"> <a href="http://happymall.mall" class="aa">首页</a></li>
 							<li class="glyphicon glyphicon-map-marker"> <a href="/static/item/javascript:;">北京</a>
 								<ol id="beijing">
 									<li style="background: red;"><a href="/static/item/javascript:;" style="color: white;">北京</a></li>
@@ -60,7 +60,7 @@
 								<a th:if="${session.loginUser==null}" href="http://auth.happymall.mall/login.html" class="aa">你好，请登录</a></li>
 								<a th:if="${session.loginUser!=null}" class="aa">欢迎：[[${session.loginUser.nickname}]]</a></li>
 							<li><a href="http://auth.happymall.mall/reg.html" th:if="${session.loginUser==null}" style="color: red;">免费注册</a> |</li>
-							<li><a href="/static/item/javascript:;" class="aa">我的订单</a> |</li>
+							<li><a href="http://order.happymall.mall/list.html" class="aa">我的订单</a> |</li>
 							<li class="jingdong"><a href="/static/item/javascript:;">我的京东</a><span class="glyphicon glyphicon-menu-down">|</span>
 								<ol class="jingdong_ol">
 									<li><a href="/static/item/javascript:;">待处理订单</a></li>
