--- a/product/src/main/resources/templates/index.html
+++ b/product/src/main/resources/templates/index.html
@@ -103,7 +103,7 @@
                 </li>
                 <span>|</span>
                 <li>
-                    <a href="http://order.happymall.mall/list.html">我的订单</a>
+                    <a href="http://member.happymall.mall/memberOrder.html">我的订单</a>
                 </li>
 
 
